--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cookie-parser": "^1.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
